added redux for projects

--- a/src/pages/Skills/skill-card/styles.module.scss
+++ b/src/pages/Skills/skill-card/styles.module.scss
@@ -3,6 +3,10 @@
 .skill-card {
     position: relative;
     overflow: hidden;
+    &:hover {
+        transform: scale(1.007);
+        transition: .1s ease-in-out;
+    }
     .title {
         color: $tertiary-text;
         cursor: pointer;
