--- a/src/pages/Projects/project-card/styles.module.scss
+++ b/src/pages/Projects/project-card/styles.module.scss
@@ -4,6 +4,12 @@
     width: 100%;
     padding: 25px;
     cursor: pointer;
+    &:hover {
+        background-color: #5e95e303;
+        background-image: radial-gradient(circle at  458.78448486328125px 354.8726749420166px, #5e95e326,transparent);
+        transition-duration: .2s;
+    transition-property: background,border-color,opacity,box-shadow,top,bottom,left,margin,right;
+    }
     .img-wrap {
         width: 40px;
         height: 40px;
@@ -46,6 +52,8 @@
             font-size: 15.2px;
             font-weight: 300;
             letter-spacing: 1px;
+    height: 90px;
+
         }
         .chips-wrap {
             display: flex;
