--- a/src/pages/Skills/Detail/styles.module.scss
+++ b/src/pages/Skills/Detail/styles.module.scss
@@ -2,8 +2,12 @@
 
 
 .detail-page-wrap{
+    margin: 0;
+    padding: 0;
     .title-wrap {
         border-block-end: 1px solid $border;
+position: relative;
+
         .title {
             font-size: 64px;
             font-weight: 900;
@@ -18,6 +22,31 @@
             background-size: auto;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+        }
+        .image-wrap {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100%;
+            width: 50%;
+            z-index: -1;
+            img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            &::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: rgb(255,255,255);
+                background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.836594012605042) 71%, rgba(255,255,255,0.5872942927170868) 100%);
+            }
+            
         }
     }
     .description {
