--- a/src/pages/Projects/Detail/styles.module.scss
+++ b/src/pages/Projects/Detail/styles.module.scss
@@ -63,6 +63,12 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            .skills-wrap {
+                display: flex;
+              .chip{
+                  margin-right: 5px;
+              }
+            }
             &:first-child {
              margin-bottom: 10px;
          }
@@ -79,10 +85,33 @@
     }
 }
 
+.screenshot-images-wrap {
+    display: grid;
+    grid-template-columns: repeat(4,minmax(0,1fr));
+    gap: 20px;
+    padding: 0 10px;
+    margin-top: 40px;
+    .screenshot-container {
+       border-top-left-radius: 10px;
+       border-top-right-radius: 10px;
+       overflow: hidden;
+        width: 230px;
+        height: 129px;
+        flex-wrap: wrap;
+        // margin-right: 30px;
+    }
+    .screenshot {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 .screenshots-wrap {
     margin-top: 30px;
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     img {
         width: 56px;
@@ -92,7 +121,6 @@
    
 }
 .screenshots-text {
-    text-align: center;
     p {
         color: $border;
         font-weight: 300;
@@ -100,3 +128,4 @@
         letter-spacing: 1px;
     }
 }
+
