--- a/src/pages/Experiences/styles.module.scss
+++ b/src/pages/Experiences/styles.module.scss
@@ -10,8 +10,9 @@
         }
     }
     .vertical-line {
+        margin-top: 40px;
         position: absolute;
-        top: 5%;
+        top: 0%;
         left: 50%;
         width: 0.5px;
         height: 100%;
