--- a/src/components/exp/styles.module.scss
+++ b/src/components/exp/styles.module.scss
@@ -26,6 +26,7 @@
             border-radius: 15px;
             z-index: 10;
             background-color: $secondary;
+            font-weight: 300;
         }
     }
     .icon {
