--- a/src/pages/Projects/Detail/styles.module.scss
+++ b/src/pages/Projects/Detail/styles.module.scss
@@ -18,6 +18,13 @@
                 font-size: 57px;
                 font-weight: 900;
                 letter-spacing: 4px;
+                background-attachment: scroll;
+                background-clip: text;
+                background-color: rgb(0, 0, 0);
+                background-image: linear-gradient(rgb(0, 0, 0), rgb(78, 78, 78));
+                background-size: auto;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
             .text {
                 margin: 8px 0;
