--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,3 +1,5 @@
+@import './../../assets/styles/light-theme.scss';
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -23,15 +25,20 @@
             margin-left: 10px;
             font-weight: 400;
             font-size: 14px;
-            
-            // line-height: 20px;
         }
     }
     &__item {
         list-style-type: none;
         display: flex;
         align-items: center;
-        padding: 10px 20px;
+        padding: 20px 20px;
+        height: 38px;
+        &.skills {
+            margin-left: 20px;
+        }
+        &:hover {
+            background: $border;
+        }
         .header_title-text {
             font-weight: 700;
             margin-left: 8px;
@@ -39,11 +46,27 @@
             letter-spacing: 1px;
 
         }
+        .header_text {
+            letter-spacing: 1px;
+        }
     }   
     .header__icons-wrap {
         margin-left: 45px;
-        .header__icons {
-            margin-right: 20px;
+        margin-right: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        &:hover {
+            background: $border;
+        }
+    }
+    .light-icon-wrap {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        &:hover {
+            background: $border;
         }
     }
 }
@@ -69,8 +92,4 @@
     &.light-icon{
         background: url('../../assets/icons/sun-icon.svg') center center/contain no-repeat;
     }
-}
-
-.header__icons-wrap {
-    display: flex;
 }
