--- a/src/components/empty-list/styles.module.scss
+++ b/src/components/empty-list/styles.module.scss
@@ -11,8 +11,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     .icon {
-        display: block;
-        background: url('./../../assets/icons/cube.svg') center center / contain no-repeat;
         width: 56px;
         height: 56px;  
         margin-bottom: 5px;
@@ -21,6 +19,7 @@
         letter-spacing: 1px;
         font-weight: 300;
         margin-top: 5px;
+        color: #3E3E3E;
     }
    }
 }
