--- a/src/pages/Search/styles.module.scss
+++ b/src/pages/Search/styles.module.scss
@@ -1,3 +1,12 @@
 .empty-list {
     margin-top: 150px;
 }
+.search-elems-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+.chip {
+    margin-right: 15px;
+    margin-top: 15px;
+}
