--- a/src/pages/Resume/styles.module.scss
+++ b/src/pages/Resume/styles.module.scss
@@ -1,10 +1,10 @@
 @import './../../assets/styles/light-theme.scss';
 
 .resume-wrap {
+    // height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     .title {
         display: block;
         font-size: 64px;
@@ -21,8 +21,10 @@
         -webkit-text-fill-color: transparent;
     }
     .chip {
+        display: block;
         color: $tertiary-text;
         font-size: 14.4px;
         font-weight: 300;
+        text-align: center;
     }
 }
