--- a/src/components/search-bar/styles.module.scss
+++ b/src/components/search-bar/styles.module.scss
@@ -1,3 +1,5 @@
+@import './../../assets/styles/light-theme.scss';
+
 .search-bar {
     .title {
         display: block;
@@ -6,12 +8,19 @@
         letter-spacing: 4px;
         margin-bottom: 20px;
         text-align: center;
+        background: linear-gradient($dark-0, $dark-4); 
         background-attachment: scroll;
-        background-clip: text;
-        background-color: rgb(0, 0, 0);
-        background-image: linear-gradient(rgb(0, 0, 0), rgb(78, 78, 78));
-        background-size: auto;
-        -webkit-background-clip: text;
+        background-clip: text; 
+        -webkit-background-clip: text; 
         -webkit-text-fill-color: transparent;
+        &.title-dark {
+            background: linear-gradient($light-0, $light-4); 
+            background-clip: text; 
+            -webkit-background-clip: text; 
+            -webkit-text-fill-color: transparent;
+        }
+    }
+    .input-dark {
+        background-color: transparent
     }
 }
