--- a/src/pages/Skills/skill-card/styles.module.scss
+++ b/src/pages/Skills/skill-card/styles.module.scss
@@ -10,7 +10,12 @@
     .title {
         color: $tertiary-text;
         cursor: pointer;
+        letter-spacing: 1px;
+        font-size: 16px;
         font-weight: 400;
+        &.title-dark {
+            color: $light-2;
+        }
     }
     .image-wrap {
         position: absolute;
@@ -18,6 +23,7 @@
         right: 0;
         height: 75px;
         width: 30%;
+        overflow: hidden;
         img {
             display: block;
             width: 100%;
@@ -31,9 +37,13 @@
             height: 100%;
             top: 0;
             left: 0;
-            background: linear-gradient(90deg,$main 0%,$main 60%,$main-60 100%),no-repeat right 40%/40%;
-            opacity: 0.8;
+            background: linear-gradient(90deg,$main 0%,$main 5%,$main-60 100%),no-repeat right 40%/40%;
+           
         }
-        
+        &.img-dark {
+            &::before {
+                   background: linear-gradient(90deg,$dark-0 0%,$dark-0 10%,$dark-0-60 100%),no-repeat right 40%/40%;
+            }
+        }
     }
 }
