--- a/src/pages/Skills/Detail/styles.module.scss
+++ b/src/pages/Skills/Detail/styles.module.scss
@@ -1,27 +1,34 @@
 @import './../../../assets/styles/light-theme.scss';
+@import "./../../../assets/styles/colors.scss";
+
 
 
 .detail-page-wrap{
     margin: 0;
     padding: 0;
     .title-wrap {
-        border-block-end: 1px solid $border;
-position: relative;
-
+        border-bottom: 1px solid $border;
+        position: relative;
+        &.title-wrap-dark {
+            border-bottom: 1px solid $dark-2;
+        }
         .title {
             font-size: 64px;
             font-weight: 900;
             text-align: center;
             padding: 110px 0;
-            border-bottom: 1px solid $border;
             letter-spacing: 4px;
+            background: linear-gradient($dark-0, $dark-4); 
             background-attachment: scroll;
-            background-clip: text;
-            background-color: $main-text;
-            background-image: linear-gradient(rgb(0, 0, 0), rgb(78, 78, 78));
-            background-size: auto;
-            -webkit-background-clip: text;
+            background-clip: text; 
+            -webkit-background-clip: text; 
             -webkit-text-fill-color: transparent;
+        &.title-dark {
+            background: linear-gradient($light-0, $light-4); 
+            background-clip: text; 
+            -webkit-background-clip: text; 
+            -webkit-text-fill-color: transparent;
+        }
         }
         .image-wrap {
             position: absolute;
@@ -46,7 +53,11 @@ position: relative;
                 background: rgb(255,255,255);
                 background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.836594012605042) 71%, rgba(255,255,255,0.5872942927170868) 100%);
             }
-            
+            &.img-dark {
+                &::before {
+                       background: linear-gradient(90deg,$dark-0 0%,$dark-0 10%,$dark-0-60 100%),no-repeat right 40%/40%;
+                }
+            }
         }
     }
     .description {
@@ -54,15 +65,18 @@ position: relative;
         line-height: 28px;
         padding: 25px 0;
         border-bottom: 1px solid $border;
+        &.description-dark {
+        border-bottom: 1px solid $dark-2;
+        }
     }
     .chips-wrap {
         display: flex;
         flex-wrap: wrap;
         margin-top: 16px;
+        margin-bottom: 5px;
         margin-left: 8px;
         .chip {
             margin-right: 5px;
-            margin-top: 5px;
         }
     }
 }
