--- a/src/components/empty-list/styles.module.scss
+++ b/src/components/empty-list/styles.module.scss
@@ -1,3 +1,5 @@
+@import './../../assets/styles/light-theme.scss';
+
 .empty-skills-wrap {
     padding: 150px 20px 20px;
     position: relative;
@@ -14,12 +16,18 @@
         width: 56px;
         height: 56px;  
         margin-bottom: 5px;
+        &.dark-icon {
+
+        }
     }
     .text {
         letter-spacing: 1px;
         font-weight: 300;
         margin-top: 5px;
         color: #3E3E3E;
+        &.dark-text {
+            color: $light-3;
+        }
     }
    }
 }
