--- a/src/components/exp/styles.module.scss
+++ b/src/components/exp/styles.module.scss
@@ -10,7 +10,9 @@
     height: 36px;
     border-radius: 10px;
     padding: 10px;
-
+    &.card-link-dark {
+        border: 1px solid $dark-2;
+    }
     cursor: help;
     &:hover {
         border: 1px solid $border-hover;
