--- a/src/pages/Education/education-card/styles.module.scss
+++ b/src/pages/Education/education-card/styles.module.scss
@@ -15,7 +15,7 @@
 .card {
     max-width: 100%;
     padding: 25px;
-    margin: 67px 2px 0;
+    margin: 67px 0 0;
 
     cursor: pointer;
     &:hover {
@@ -57,6 +57,9 @@
             font-size: 14.4px;
             letter-spacing: 1px;
             color: $accent-text;
+            &.date-text-dark {
+                color: $light-3;
+            }
           }
         }
         .experience {
@@ -82,7 +85,9 @@
     position: absolute;
     top: 50%;
     left: 47.6%;
-
+    &.condition-icon-wrap-dark {
+        background-color: #000;
+    }
 }
 .condition-icon {
     display: block;
