--- a/src/pages/Projects/Detail/styles.module.scss
+++ b/src/pages/Projects/Detail/styles.module.scss
@@ -1,12 +1,16 @@
 
 @import './../../../assets/styles/light-theme.scss';
+@import './../../../assets/styles/colors.scss';
 
 .detail-wrap {
     .title-box {
     padding: 32px 0 80px 0;
     border-bottom: 1px solid $border;
     position: relative;
+&.title-box-dark {
+    border-bottom: 1px solid $dark-2;
 
+}
 
         .title-wrap{
             display: flex;
@@ -18,14 +22,18 @@
                 font-size: 57px;
                 font-weight: 900;
                 letter-spacing: 4px;
+                background: linear-gradient($dark-0, $dark-4); 
                 background-attachment: scroll;
-                background-clip: text;
-                background-color: rgb(0, 0, 0);
-                background-image: linear-gradient(rgb(0, 0, 0), rgb(78, 78, 78));
-                background-size: auto;
-                -webkit-background-clip: text;
+                background-clip: text; 
+                -webkit-background-clip: text; 
+                -webkit-text-fill-color: transparent;
+            &.title-dark {
+                background: linear-gradient($light-0, $light-4); 
+                background-clip: text; 
+                -webkit-background-clip: text; 
                 -webkit-text-fill-color: transparent;
             }
+        }
             .text {
                 margin: 8px 0;
                 font-weight: 300;
@@ -38,6 +46,10 @@
                 background: $border;
                 margin-top: 10px;
                 margin-bottom: 10px;
+                &.border-dark {
+                background: $dark-2;
+
+                }
             }
             .image-wrap {
                 position: absolute;
@@ -61,6 +73,11 @@
                     left: 0;
                     background: rgb(255,255,255);
                     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.836594012605042) 71%, rgba(255,255,255,0.5872942927170868) 100%);
+                }
+                &.img-dark {
+                    &::before {
+                           background: linear-gradient(90deg,$dark-0 0%,$dark-0 10%,$dark-0-60 100%),no-repeat right 40%/40%;
+                    }
                 }
                 
             }
@@ -89,6 +106,10 @@
     .description {
         letter-spacing: 1px;
         line-height: 28px;
+    }
+    &.description-wrap-dark {
+    border-bottom: 1px solid $dark-2;
+
     }
 }
 
@@ -120,7 +141,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    img {
+    .img {
         width: 56px;
         height: 56px;
         object-fit: contain;
@@ -128,11 +149,14 @@
    
 }
 .screenshots-text {
-    p {
+    .text {
         color: $border;
         font-weight: 300;
         margin-top: 10px;
         letter-spacing: 1px;
+    &.text-dark {
+        color: $dark-2;
+    }
     }
 }
 
