--- a/src/pages/Projects/project-card/styles.module.scss
+++ b/src/pages/Projects/project-card/styles.module.scss
@@ -1,4 +1,5 @@
 @import './../../../assets/styles/light-theme.scss';
+@import './../../../assets/styles/colors.scss';
 
 .project-card-wrap {
     width: 100%;
@@ -25,6 +26,9 @@
         border-bottom: 1px solid $border;
         margin-top: 20px;
         padding-bottom: 10px;
+        &.title-wrap-dark {
+        border-bottom: 1px solid $dark-2;
+        }
         .title {
             font-size: 20px;
             font-weight: 700;
@@ -35,6 +39,9 @@
         border-bottom: 1px solid $border;
         margin-top: 10px;
         margin-bottom: 10px;
+        &.body-dark {
+        border-bottom: 1px solid $dark-2;
+        }
         .template-wrap {
             display: flex;
             align-items: center;
@@ -45,6 +52,9 @@
             font-size: 14.4px;
             letter-spacing: 1px;
             color: #202020;
+            &.template-wrap-dark {
+            color: $light-0;
+            }
         }
         .description {
             margin-top: 20px;
