--- a/src/pages/Projects/Detail/styles.module.scss
+++ b/src/pages/Projects/Detail/styles.module.scss
@@ -1,17 +1,9 @@
-
 @import './../../../assets/styles/light-theme.scss';
 @import './../../../assets/styles/colors.scss';
 
 .detail-wrap {
     .title-box {
     padding: 32px 0 80px 0;
-    border-bottom: 1px solid $border;
-    position: relative;
-&.title-box-dark {
-    border-bottom: 1px solid $dark-2;
-
-}
-
         .title-wrap{
             display: flex;
             flex-direction: column;
@@ -20,19 +12,6 @@
             .title {
                 margin: 5px 0;
                 font-size: 57px;
-                font-weight: 900;
-                letter-spacing: 4px;
-                background: linear-gradient($dark-0, $dark-4); 
-                background-attachment: scroll;
-                background-clip: text; 
-                -webkit-background-clip: text; 
-                -webkit-text-fill-color: transparent;
-            &.title-dark {
-                background: linear-gradient($light-0, $light-4); 
-                background-clip: text; 
-                -webkit-background-clip: text; 
-                -webkit-text-fill-color: transparent;
-            }
         }
             .text {
                 margin: 8px 0;
@@ -58,6 +37,8 @@
                 height: 100%;
                 width: 50%;
                 z-index: -1;
+        overflow: hidden;
+
                 img {
                     display: block;
                     width: 100%;
