--- a/src/components/chip-icon/styles.module.scss
+++ b/src/components/chip-icon/styles.module.scss
@@ -40,4 +40,12 @@
             background-color: $secondary;
         }
     }
+    &.chip-icon-dark {
+        &:hover {
+            border: 1px solid $dark-2;
+            &::before {
+                background-color: $dark-1;
+            }
+        }
+    }
 }
