--- a/src/assets/styles/common.module.scss
+++ b/src/assets/styles/common.module.scss
@@ -1,5 +1,13 @@
 .container {
-    max-width: 1000px;
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto;
 }
+
+
+@media screen and (max-width: 951px) {
+   .container {
+    max-width: 944px;
+    width: 100%;
+   }
+  }
