--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,106 +1,124 @@
-@import './../../assets/styles/light-theme.scss';
-
+@import "./../../assets/styles/light-theme.scss";
 
 .header {
+  position: sticky;
+  z-index: 10;
+  &__navbar {
+    padding: 0 12px;
+    margin: 0 auto;
+  }
+  &__list {
+    .logo-icon {
+      display: block;
+      width: 28px;
+      height: 28px;
+      background: url("../../assets/icons/logo-icon.svg") center center /
+        contain no-repeat;
+    }
+    .header_text {
+      margin-left: 10px;
+      font-weight: 400;
+      font-size: 14px;
+    }
+  }
+  &__list-box {
     display: flex;
     justify-content: space-between;
-    position: sticky;
-    z-index: 10;
-    &__navbar {
-        display: flex;
-        align-items: center;
+    align-items: center;
+    .header__list-box__item {
+      display: flex;
+      margin-right: 16px;
     }
-    &__list {
-        display: flex;
-        align-items: center;
-        margin: 0 auto;
-        .logo-icon {
-            display: block;
-            width: 28px;
-            height: 28px;
-            background: url('../../assets/icons/logo-icon.svg') center center /contain no-repeat;
-        }
-        .header_text{
-            margin-left: 10px;
-            font-weight: 400;
-            font-size: 14px;
-        }
+  }
+  &__item {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    padding: 20px 20px;
+    height: 38px;
+    &.skills {
+      margin-left: 20px;
     }
-    &__item {
-        list-style-type: none;
-        display: flex;
-        align-items: center;
-        padding: 20px 20px;
-        height: 38px;
-        &.skills {
-            margin-left: 20px;
-        }
-        &:hover {
-            background: $light-1;
-        }
-        .header_title-text {
-            font-weight: 700;
-            margin-left: 8px;
-            font-size: 14px;
-            letter-spacing: 1px;
-
-        }
-        .header_text {
-            letter-spacing: 1px;
-        }
+    &:hover {
+      background: $light-1;
     }
-    &__item-dark {
-        list-style-type: none;
-        display: flex;
-        align-items: center;
-        padding: 20px 20px;
-        height: 38px;
-        &:hover {
-            background: $dark-1;
-        }
-    } 
-    .link {
-        cursor: pointer;
-    }  
-    .header__icons-wrap {
-        margin-left: 45px;
-        margin-right: 15px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        &:hover {
-            background: $border;
-        }
-        &.header__icons-dark {
-            &:hover{
-            background: $dark-1;
-
-            }
-        }
+    .header_title-text {
+      font-weight: 700;
+      margin-left: 8px;
+      font-size: 14px;
+      letter-spacing: 1px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    //   width: auto;
     }
-    .light-icon-wrap {
-        height: 100%;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        user-select: none;
-        &:hover {
-            background: $border;
-        }
-     &.light-icon-dark{
-         &:hover{
-             background: $dark-1;
-         }
-     }
+    .header_text {
+      letter-spacing: 1px;
     }
+  }
+  &__item-dark {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    padding: 20px 20px;
+    height: 38px;
+    &:hover {
+      background: $dark-1;
+    }
+  }
+  .link {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+  .header__icons-wrap {
+    margin-left: 45px;
+    margin-right: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    &:hover {
+      background: $border;
+    }
+    &.header__icons-dark {
+      &:hover {
+        background: $dark-1;
+      }
+    }
+  }
+  .light-icon-wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+    &:hover {
+      background: $border;
+    }
+    &.light-icon-dark {
+      &:hover {
+        background: $dark-1;
+      }
+    }
+  }
 }
 
-
-
 .header__icons {
-    display: block;
-    width: 18px;
-    height: 18px;
-    
+  display: block;
+  width: 18px;
+  height: 18px;
+}
+
+@media screen and (max-width: 951px) {
+  .header_text {
+    display: none;
+  }
+  .header__list-links-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header_title-text {
+    width: 117px;
+  }
 }
