--- a/src/pages/Education/education-card/styles.module.scss
+++ b/src/pages/Education/education-card/styles.module.scss
@@ -13,7 +13,8 @@
     }
 }
 .card {
-    max-width: 100%;
+    max-width: 47%;
+    width: 100%;
     padding: 25px;
     margin: 67px 0 0;
 
@@ -84,7 +85,7 @@
     z-index: 1;
     position: absolute;
     top: 50%;
-    left: 47.6%;
+    left: 48%;
     &.condition-icon-wrap-dark {
         background-color: #000;
     }
