--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -4,15 +4,15 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 80px;
     .info-wrap {
-        max-width: 653px;
-        width: 100%;
         margin: 130px 0;
 
         .title {
             margin: 5px 0;
             display: block;
             font-size: 64px;
+            text-align: left;
             font-weight: 900;
             letter-spacing: 4px;
             background: linear-gradient($dark-0, $dark-4); 
@@ -32,7 +32,9 @@
             color: $tertiary-text;
             font-weight: 200;
             letter-spacing: 1px;
-            width: 653px;
+            text-align: left;
+            max-width: 800px;
+            width: 100%;
             &.main-info-dark {
                 color: $light-2;
             }
@@ -73,4 +75,18 @@
    
     .slider {
     }
+
+    @media screen and (max-width: 951px) {
+        .info-wrap {
+            margin: 0;
+            .title {
+                font-size: 56px;
+                &.title-dark {
+                    font-size: 56px;
+                }
+               }
+
+        }
+     
+      }
 }
