added skills page media 951 and experiences page

--- a/src/components/main-title/styles.module.scss
+++ b/src/components/main-title/styles.module.scss
@@ -20,3 +20,9 @@
         -webkit-text-fill-color: transparent;
     }
 }
+
+@media screen and (max-width: 951px) {
+    .title {
+        font-size: 56px;
+    }
+}
