--- a/src/pages/Projects/styles.module.scss
+++ b/src/pages/Projects/styles.module.scss
@@ -1,19 +1,24 @@
-.project-wrap{
-    .chips-wrap{
-        margin: 20px 0;
-        display: flex;
-        align-items: center;
-        .chip {
-            margin: 2.5px;
-        }
+.project-wrap {
+  .chips-wrap {
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    .chip {
+      margin: 2.5px;
     }
-    .cards-wrap {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        .card {
-            min-width: 455px;
-            width: 100%;
-        }
+  }
+  .cards-wrap {
+    display: flex;
+    gap: 20px;
+    .card {
+    //   min-width: 455px;
+    //   width: 100%;
     }
+  }
+  @media screen and (max-width: 951px) {
+    .card {
+        max-width: 455px;
+        width: 100%;
+    }
+  }
 }
