--- a/src/pages/Experiences/experience-card/styles.module.scss
+++ b/src/pages/Experiences/experience-card/styles.module.scss
@@ -1,98 +1,113 @@
-@import './../../../assets/styles/light-theme.scss';
-@import './../../../assets/styles/colors.scss';
-
-
+@import "./../../../assets/styles/light-theme.scss";
+@import "./../../../assets/styles/colors.scss";
 
 .card-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    .link {
-        display: block;
-        max-width: 47.5%;
-        width: 100%;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  .link {
+    display: block;
+    max-width: 47.5%;
+    width: 100%;
+  }
 }
 .card {
-    max-width: 100%;
-    padding: 25px;
-    display: flex;
-    margin: 67px 2px 0;
+  max-width: 100%;
+  padding: 25px;
+  display: flex;
+  margin: 67px 2px 0;
 
-    cursor: pointer;
-    &:hover {
-        transform: scale(1.007);
-        transition: .1s ease-in-out;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.007);
+    transition: 0.1s ease-in-out;
+  }
+  .img-wrap {
+    width: 75px;
+    height: 75px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 15px;
     }
-    .img-wrap {
-        width: 75px;
-        height: 75px;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 15px;
-        }
+  }
+  .body {
+    margin-left: 20px;
+    max-width: 300px;
+    .title {
+      margin: 5px 0;
+      font-size: 18px;
+      font-weight: 700;
+      letter-spacing: 1px;
     }
-    .body {
-        margin-left: 20px;
-        max-width: 300px;
-        .title {
-            margin: 5px 0;
-            font-size: 18px;
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
-        .exps-wrap {
-            display: flex;
-            margin-bottom: 8px;
-            margin: 12px 0;
-            .exp {
-                margin-bottom: 5px;
-                margin-right: 5px;
-            }
-        }
-        .date {
-            margin: 12px 0;
-          .date-text {
-            font-weight: 200;
-            font-size: 14.4px;
-            letter-spacing: 1px;
-            color: $accent-text;
-            &.date-text-dark {
-                color: $light-3;
-            }
-          }
-        }
-        .experience {
-            .experience-text {
-                letter-spacing: 1px;
-            }
-        }
-        .chip-icons-wrap {
-            display: flex;
-            margin-top: 12px;
-            .icon {
-                margin-top: 5px;
-                margin-right: 5px;
-            }
-        }
+    .exps-wrap {
+      display: flex;
+      margin-bottom: 8px;
+      margin: 12px 0;
+      .exp {
+        margin-bottom: 5px;
+        margin-right: 5px;
+      }
     }
+    .date {
+      margin: 12px 0;
+      .date-text {
+        font-weight: 200;
+        font-size: 14.4px;
+        letter-spacing: 1px;
+        color: $accent-text;
+        &.date-text-dark {
+          color: $light-3;
+        }
+      }
+    }
+    .experience {
+      .experience-text {
+        letter-spacing: 1px;
+      }
+    }
+    .chip-icons-wrap {
+      display: flex;
+      margin-top: 12px;
+      .icon {
+        margin-top: 5px;
+        margin-right: 5px;
+      }
+    }
+  }
 }
 .condition-icon-wrap {
-    background-color: #fff;
-    padding: 15px;
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    left: 48%;
-    &.condition-icon-wrap-dark {
-        background-color: #000;
-    }
-
+  background-color: #fff;
+  padding: 15px;
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 48%;
+  &.condition-icon-wrap-dark {
+    background-color: #000;
+  }
 }
 .condition-icon {
-    display: block;
-   z-index: 1;
+  display: block;
+  z-index: 1;
+}
+
+@media screen and (max-width: 951px) {
+  .condition-icon-wrap {
+    display: none;
+  }
+  .card-box {
+    .link {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
+  .card {
+    .body {
+        max-width: 751px;
+        width: 100%;
+      }
+  }
 }
