--- a/src/pages/Experiences/styles.module.scss
+++ b/src/pages/Experiences/styles.module.scss
@@ -1,40 +1,54 @@
-@import './../../assets/styles/light-theme.scss';
+@import "./../../assets/styles/light-theme.scss";
 
 .exp-wrap {
-    padding-bottom: 48px;
+  padding-bottom: 48px;
+  .exp-cards-wrap {
+    position: relative;
+    .card-box {
+      display: flex;
+      align-items: center;
+    }
+  }
+  .vertical-line {
+    margin-top: 40px;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    width: 0.5px;
+    height: 100%;
+    background: $border;
+    z-index: -2;
+    display: flex;
+    &.vertical-line-dark {
+      background: $dark-2;
+    }
+  }
+
+  .card {
+    display: flex;
+    flex-direction: row;
+  }
+  @media screen and (max-width: 951px) {
     .exp-cards-wrap {
-        position: relative;
-        .card-box {
-            display: flex;
-            align-items: center;
-        }
+        display: grid;
+        grid-template-columns: 1fr;
     }
     .vertical-line {
-        margin-top: 40px;
-        position: absolute;
-        top: 0%;
-        left: 50%;
-        width: 0.5px;
-        height: 100%;
-        background: $border;
-        z-index: -2;
-        display: flex;
-        &.vertical-line-dark {
-            background: $dark-2;
-        }
+      display: none;
     }
-    
-    .card {
-        display: flex;
+    .card-row {
         flex-direction: row;
     }
+  }
 }
 
 .card-row {
-    display: flex;
-    flex-direction: row-reverse;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .empty-list {
-    margin-top: 150px;
+  margin-top: 150px;
 }
+
+
