--- a/src/assets/styles/common.module.scss
+++ b/src/assets/styles/common.module.scss
@@ -1,13 +1,14 @@
 .container {
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 22px;
+  position: relative;
 }
 
-
 @media screen and (max-width: 951px) {
-   .container {
+  .container {
     max-width: 944px;
     width: 100%;
-   }
   }
+}
