--- a/src/components/burger-menu/styles.module.scss
+++ b/src/components/burger-menu/styles.module.scss
@@ -1,36 +1,42 @@
-.burger-menu {
+.nav-menu {
   position: absolute;
-  z-index: 2;
-  background-color: rebeccapurple;
+  max-width: 100%;
   width: 100%;
-  height: 100%;
-  top: 0;
-  transform-origin: 85px top;
-  transition: 0.2s ease-in-out;
-  transform: scale(0);
-
-  &.burger-menu-active {
-    transform: scale(1);
-    transition: 0.2s ease-in-out;
-    transform-origin: 0 right;
-  }
+  max-height: 100vh;
+  min-height: 100vh;
+  z-index: -1;
+  background-color: #000;
+  padding-top: 30px;
+  top: 41px;
+  left: 0;
+  transform: translateY(-100vh);
+  opacity: 0;
+  transition: 0.4s ease;
   &__list {
     list-style-type: none;
   }
   &__item {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+  }
+  &__link {
+    display: flex;
+    align-items: center;
+  }
+  &__text {
+    letter-spacing: 1px;
+  }
+  &.nav-menu-active {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 
-.link {
-  display: flex;
+.icons {
+  margin-top: 28px;
 }
 
 .icon {
-  display: block;
-  width: 20px;
-  height: 20px;
-  &.skills-icon {
-    background: url("./../../assets/icons/skills-icon.svg") center center /
-      contain no-repeat;
-  }
+  margin-right: 20px;
 }
