--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,6 +1,9 @@
 @import "./../../assets/styles/light-theme.scss";
 
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 4;
   &__navbar {
     padding: 0 12px;
     margin: 0 auto;
@@ -26,6 +29,7 @@
     .header__list-box__item {
       display: flex;
       margin-right: 16px;
+      position: relative;
     }
   }
   &__item {
@@ -48,7 +52,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
-    //   width: auto;
+      //   width: auto;
     }
     .header_text {
       letter-spacing: 1px;
@@ -114,6 +118,10 @@
   height: 18px;
 }
 
+.mobile-logo-text {
+  display: none;
+}
+
 @media screen and (max-width: 951px) {
   .header_text {
     display: none;
@@ -124,5 +132,21 @@
   }
   .header_title-text {
     width: 117px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    .header__list-box {
+      .header__list-box__item {
+        display: none;
+      }
+    }
+  }
+  .header_title-text {
+    display: none;
+  }
+  .mobile-logo-text {
+    display: flex;
   }
 }
