--- a/src/components/burger-menu/styles.module.scss
+++ b/src/components/burger-menu/styles.module.scss
@@ -1,6 +1,6 @@
 .nav-menu {
   position: absolute;
-  max-width: 100%;
+  max-width: 100vh;
   width: 100%;
   max-height: 100vh;
   min-height: 100vh;
